--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-.vscode/ThreeJS Robot.code-workspace
 **/.vscode/
-.vscode/settings.json
-.vscode/settings.json
+#.vscode/ThreeJS Robot.code-workspace
+#.vscode/settings.json
